# organizeme

./: .gitignore  CMakeLists.txt  README.md  config.h.in  generictask.h  main.cpp  package.cpp
cmake/: FindPQXX.cmake  addprefix.cmake
docs/: ProjectDatabase.drawio
migrations/: 0.0.1.sql  0.0.2.sql  0.0.3.sql
organizeme/: CMakeLists.txt
organizeme/client/: CMakeLists.txt
organizeme/client/include/client/: client.h  task.h  taskgroup.h  user.h  usergroup.h
organizeme/client/src/: client.cpp  taskgroup.cpp  user.cpp  usergroup.cpp
organizeme/dbapi/: CMakeLists.txt
organizeme/dbapi/include/dbapi/: TaskConnector.h  TaskGroupConnector.h  UserConnector.h  UserGroupConnector.h  core.h  select.h
organizeme/dbapi/src/: TaskConnector.cpp  TaskGroupConnector.cpp  UserConnector.cpp  UserGroupConnector.cpp  core.cpp  select.cpp
organizeme/module_example_1/: CMakeLists.txt
organizeme/module_example_2/: CMakeLists.txt
organizeme/module_example_3/: CMakeLists.txt
organizeme/package/: CMakeLists.txt
organizeme/package/include/package/: changetask.h  changetaskgroup.h  changeuser.h  changeusergroup.h  generictask.h  generictaskgroup.h  genericuser.h  genericusergroup.h  package.h  task.h  user.h
organizeme/package/src/: package.cpp
organizeme/server/: CMakeLists.txt
organizeme/server/include/server/: server.h
organizeme/server/src/: server.cpp
tests/: CMakeLists.txt
tests/client/: CMakeLists.txt  test_client.cpp
tests/dbapi/: CMakeLists.txt  test_TaskConnector.cpp  test_dbapi.cpp  test_select.cpp  test_taskconnector.cpp  test_taskgroupconnector.cpp  test_userconnector.cpp  test_usergroupconnector.cpp
tests/package/: CMakeLists.txt  test_package.cpp  test_package_header.cpp  test_package_task.cpp  test_package_taskgroup.cpp  test_package_user.cpp  test_package_usergroup.cpp
tests/server/: CMakeLists.txt  client.cpp  test_server.cpp
